базовая верстка раздела проектов

--- a/index.html
+++ b/index.html
@@ -56,90 +56,88 @@
     <section class="projects" id="projects">
       <div class="projects-layout-left">
         <header class="projects-header">
-          <h2 class="projects-title">Projects</h2>
-          <div class="projects-navigation">
-            <ul class="projects-navigation-list">
-              <li><a class="projects-navigation-link current" href="#">All</a></li>
-              <li><a class="projects-navigation-link" href="#">House</a></li>
-              <li><a class="projects-navigation-link" href="#">Commercial</a></li>
-              <li><a class="projects-navigation-link" href="#">Personal</a></li>
-              <li><a class="projects-navigation-link" href="#">Studio lab</a></li>
-            </ul>
-          </div>
+          <h2 class="title">Projects</h2>
+          <ul class="navigation">
+            <li><a class="navigation-link current" href="#">All</a></li>
+            <li><a class="navigation-link" href="#">House</a></li>
+            <li><a class="navigation-link" href="#">Commercial</a></li>
+            <li><a class="navigation-link" href="#">Personal</a></li>
+            <li><a class="navigation-link" href="#">Studio lab</a></li>
+          </ul>
         </header>
 
         <section class="project  project--fondue">
           <h3 class="project-name">Fondue</h3>
-          <p class="project-information">
-            <b class="lead">Project assistant</b>: Francesco Dompieri
-            <b class="lead">Material</b>: Glass and Metal
-            <b class="lead">Typology</b>: Suspension lamp
-            <b class="lead">Client</b>: David Design
-            <b class="lead">Year</b>: 2014
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Project assistant</b>: Francesco Dompieri</li>
+            <li><b class="lead">Material</b>: Glass and Metal</li>
+            <li><b class="lead">Typology</b>: Suspension lamp</li>
+            <li><b class="lead">Client</b>: David Design</li>
+            <li><b class="lead">Year</b>: 2014</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project   project--louis">
           <h3 class="project-name">Louis XX</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Philippe Starck
-            <b class="lead">Typology</b>: Chairs
-            <b class="lead">Client</b>: Vitra
-            <b class="lead">Year</b>: 2012
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Philippe Starck</li>
+            <li><b class="lead">Typology</b>: Chairs</li>
+            <li><b class="lead">Client</b>: Vitra</li>
+            <li><b class="lead">Year</b>: 2012</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project   project--p22">
           <h3 class="project-name">395-396 P22</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Partick Norguet
-            <b class="lead">Typology</b>: Armchairs
-            <b class="lead">Client</b>: Cassina
-            <b class="lead">Year</b>: 2013
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Partick Norguet</li>
+            <li><b class="lead">Typology</b>: Armchairs</li>
+            <li><b class="lead">Client</b>: Cassina</li>
+            <li><b class="lead">Year</b>: 2013</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project   project--sesann">
           <h3 class="project-name">Sesann</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Gianfranco Frattini
-            <b class="lead">Typology</b>: Armchairs
-            <b class="lead">Client</b>: Cassina
-            <b class="lead">Year</b>: 1970
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Gianfranco Frattini</li>
+            <li><b class="lead">Typology</b>: Armchairs</li>
+            <li><b class="lead">Client</b>: Cassina</li>
+            <li><b class="lead">Year</b>: 1970</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project   project--alessi">
           <h3 class="project-name">Alessi</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Piero Lissoni
-            <b class="lead">Client</b>: Alessi
-            <b class="lead">Year</b>: 2013
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Piero Lissoni</li>
+            <li><b class="lead">Client</b>: Alessi</li>
+            <li><b class="lead">Year</b>: 2013</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
       </div>
@@ -147,57 +145,55 @@
       <div class="projects-layout-right">
         <section class="project   project--potter">
           <h3 class="project-name">Potter</h3>
-          <p class="project-information">
-            <b class="lead">For</b> Stelton
-          </p>
+          <ul class="project-information">
+            <li><b class="lead">For</b> Stelton</li>
+          </ul>
           <p class="project-description">Potter focuses on the functionality and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project  project--tabano">
           <h3 class="project-name">Tabano</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Patricia Urquiola
-            <b class="lead">Typology</b>: Armchairs
-            <b class="lead">Client</b>: B&B Italia
-            <b class="lead">Year</b>: 2014
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Patricia Urquiola</li>
+            <li><b class="lead">Typology</b>: Armchairs</li>
+            <li><b class="lead">Client</b>: B&B Italia</li>
+            <li><b class="lead">Year</b>: 2014</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <section class="project  project--fiji">
           <h3 class="project-name">Fiji</h3>
-          <p class="project-information">
-            <b class="lead">Designer</b>: Cuno Frommherz
-            <b class="lead">Typology</b>: Armchairs
-            <b class="lead">Year</b>: 2012
-          </p>
-          <a class="project-view-link" href="#">View project</a>
-          <div class="project-like">
-            <button class="project-like-btn" type="button">Like it!</button>
-            <span class="project-like-count">+200</span>
+          <ul class="project-information">
+            <li><b class="lead">Designer</b>: Cuno Frommherz</li>
+            <li><b class="lead">Typology</b>: Armchairs</li>
+            <li><b class="lead">Year</b>: 2012</li>
+          </ul>
+          <a class="view-link" href="#">View project</a>
+          <div class="like">
+            <button class="like-btn" type="button">Like it!</button>
+            <span class="like-count">+200</span>
           </div>
         </section>
 
         <footer class="projects-footer">
-          <h2 class="projects-title">Timeline</h2>
-          <div class="projects-navigation">
-            <ul class="projects-navigation-list">
-              <li><a class="projects-navigation-link current" href="#">2014</a></li>
-              <li><a class="projects-navigation-link" href="#">2013</a></li>
-              <li><a class="projects-navigation-link" href="#">2012</a></li>
-              <li><a class="projects-navigation-link" href="#">2011</a></li>
-              <li><a class="projects-navigation-link" href="#">2010</a></li>
-            </ul>
-          </div>
+          <h2 class="title">Timeline</h2>
+          <ul class="navigation">
+            <li><a class="navigation-link current" href="#">2014</a></li>
+            <li><a class="navigation-link" href="#">2013</a></li>
+            <li><a class="navigation-link" href="#">2012</a></li>
+            <li><a class="navigation-link" href="#">2011</a></li>
+            <li><a class="navigation-link" href="#">2010</a></li>
+          </ul>
         </footer>
       </div>
     </section>
