сверстал раздел с проектами

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <ul class="project-information">
             <li><b class="lead">For</b> Stelton</li>
           </ul>
-          <p class="project-description">Potter focuses on the functionality and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
+          <p class="project-description">Potter focuses on the functional-ity and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
           <a class="view-link" href="#">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
