--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </div>
         </section>
 
-        <section class="project   project--louis">
+        <section class="project  project--louis">
           <h3 class="project-name">Louis XX</h3>
           <ul class="project-information">
             <li><b class="lead">Designer</b>: Philippe Starck</li>
@@ -97,7 +97,7 @@
           </div>
         </section>
 
-        <section class="project   project--p22">
+        <section class="project  project--p22">
           <h3 class="project-name">395-396 P22</h3>
           <ul class="project-information">
             <li><b class="lead">Designer</b>: Partick Norguet</li>
@@ -112,7 +112,7 @@
           </div>
         </section>
 
-        <section class="project   project--sesann">
+        <section class="project  project--sesann">
           <h3 class="project-name">Sesann</h3>
           <ul class="project-information">
             <li><b class="lead">Designer</b>: Gianfranco Frattini</li>
@@ -127,7 +127,7 @@
           </div>
         </section>
 
-        <section class="project   project--alessi">
+        <section class="project  project--alessi">
           <h3 class="project-name">Alessi</h3>
           <ul class="project-information">
             <li><b class="lead">Designer</b>: Piero Lissoni</li>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="projects-layout-right">
-        <section class="project   project--potter">
+        <section class="project  project--potter">
           <h3 class="project-name">Potter</h3>
           <ul class="project-information">
             <li><b class="lead">For</b> Stelton</li>
@@ -196,6 +196,63 @@
           </ul>
         </footer>
       </div>
+
+      <article class="project  project--fondue  project--single">
+        <div class="project-container">
+          <h3 class="project-name">Fondue</h3>
+          <ul class="project-information">
+            <li><b class="lead">Project assistant</b>: Francesco Dompieri</li>
+            <li><b class="lead">Material</b>: Glass and Metal</li>
+            <li><b class="lead">Typology</b>: Suspension lamp</li>
+            <li><b class="lead">Client</b>: David Design</li>
+            <li><b class="lead">Year</b>: 2014</li>
+          </ul>
+          <p class="project-description">Merging different traditions – the South European and the North European – in the field of household suspended lights is the starting point of Fondue, a lamp designed by Luca Nichetto for the Swedish David Design. The inspiration comes from the observation of pot bellied traditional fondue cauldrons, which were kept suspended above a heat source for the cheese to slowly melt. Similarly, the pot bellied glass diffuser is suspended, supported by a slender metal frame enclosing the light source.</p>
+          <p class="project-description">One of Fondue’s peculiarities is the solution designed for the output of the power cable, which is generally concealed or made less evident. Instead, here it becomes a feature of the lamp, located in its lower part, which allows the power source to be released from the fixing point in the ceiling. This makes Fondue easily adaptable to various architectural situations.</p>
+
+          <div class="slider">
+            <button class="button button-left"></button>
+            <div class="image image-1"></div>
+            <div class="image image-2"></div>
+            <button class="button button-right"></button>
+          </div>
+
+          <ul class="socials-list">
+            <li class="socials-item">
+              <a class="socials-link socials-link--facebook" href="#">
+                <span class="visually-hidden">Facebook</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="22" viewBox="0 0 10 21.5">
+                  <path fill="#79cbc1" d="M10 7l-.4 3.7h-3v10.7H2.2V10.7H0V7h2.2V4.8C2.2 1.8 3.5 0 7 0h3v3.7H8.1c-1.4 0-1.5.5-1.5 1.5V7H10z" />
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link socials-link--twitter" href="#">
+                <span class="visually-hidden">Twitter</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="21" viewBox="0 0 39.6 32.1">
+                  <path fill="#79cbc1" d="M35.5 8v1.1c0 10.7-8.2 23.1-23.1 23.1-4.6 0-8.9-1.3-12.5-3.6.7.1 1.3.1 2 .1 3.8 0 7.3-1.3 10.1-3.5-3.6-.1-6.6-2.4-7.6-5.6.5.1 1 .1 1.5.1.7 0 1.5-.1 2.1-.3-3.7-.8-6.5-4-6.5-8v-.1c1.1.6 2.3 1 3.7 1C3 10.8 1.6 8.4 1.6 5.5c0-1.5.4-2.9 1.1-4.1 4 4.9 10 8.1 16.7 8.5-.1-.6-.2-1.2-.2-1.9 0-4.5 3.6-8.1 8.1-8.1 2.3 0 4.4 1 5.9 2.6 1.8-.4 3.6-1 5.1-2-.6 1.9-1.9 3.5-3.6 4.5 1.6-.2 3.2-.6 4.7-1.3-.9 1.7-2.3 3.2-3.9 4.3z" /></svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link socials-link--google" href="#">
+                <span class="visually-hidden">Google</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 37.6 37.8">
+                  <path fill="#79cbc1" d="M24 0l-3 1.8h-3.1c2.2 1.4 3.4 4.1 3.4 6.7 0 6-5.1 6.5-5.1 9.5 0 2.9 6.8 4.1 6.8 10.4 0 2.6-1.2 4.7-3.2 6.4-2.6 2.2-6.2 3-9.5 3C6.1 37.7 0 35.9 0 30.7c0-1.1.4-2.1.8-3.1 2-4.1 8.3-5.1 12.4-5.2-.7-1-1.5-2.1-1.5-3.4 0-.7.3-1.2.5-1.9-.5.1-1.1.1-1.6.1-4.4 0-8.2-3.2-8.2-7.8 0-4.3 3.3-8 7.5-8.9 1.4-.3 2.8-.5 4.2-.5H24zm-9.5 23.8h-1.1c-3.7 0-9.2 1.2-9.2 5.9 0 4.4 4.9 6 8.5 6 3.4 0 7.1-1.4 7.1-5.3 0-3.2-3-5-5.3-6.6zM11 1.7C8 1.7 6.6 4.3 6.6 7c0 3.4 2.3 8.8 6.3 8.8 3.1 0 4.2-2.2 4.2-5 0-3.4-1.9-9.1-6.1-9.1zm26.7 7h-5.8v5.8H29V8.7h-5.8V5.8H29V0h2.9v5.8h5.8v2.9z" /></svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a class="socials-link socials-link--gmail" href="#">
+                <span class="visually-hidden">Gmail</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20" viewBox="0 0 512 383.5">
+                  <path fill="#000000" d="M502.3 126.8c3.9-3.1 9.7-.2 9.7 4.7V336c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V131.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 256c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z" />
+                </svg>
+              </a>
+            </li>
+          </ul>
+
+          <button class="close-button" type="button"></button>
+        </div>
+      </article>
     </section>
 
     <section class="studio" id="studio">
@@ -349,4 +406,8 @@
     </div>
   </footer>
 
-</body></html>
+
+
+</body>
+
+</html>
