--- a/index.html
+++ b/index.html
@@ -357,14 +357,14 @@
         <article class="article">
           <h1 class="article-header">Mauris et dui sed justo placerat tristique</h1>
           <date class="article-date">11.07.2014</date>
-          <img class="article-image" src="img/article-image-1.jpg" width="370" height="180" alt="article content image">
+          <img class="article-image" src="img/article-1.jpg" width="370" height="180" alt="article content image">
           <p class="article-lead">Maecenas imperdiet nisi lorem, sed fermentum tortor pretium eget. Sed mollis lacus quis nunc cursus cursus. Quisque et magna sit amet sapien fermentum scelerisque eu id massa. Mauris ornare massa vel mauris tempus, vitae tempus urna tincidunt.</p>
           <a class="article-more" href="#">Read more</a>
         </article>
         <article class="article">
           <h1 class="article-header">Proin vehicula nibh massa</h1>
           <date class="article-date">11.06.2014</date>
-          <img class="article-image" src="img/article-image-2.jpg" width="370" height="180" alt="article content image">
+          <img class="article-image" src="img/article-2.jpg" width="370" height="180" alt="article content image">
           <p class="article-lead">Praesent non mauris nec orci scelerisque faucibus. Nulla ac varius est. Aenean auctor nisl elit, nec sollicitudin lectus iaculis sed. Maecenas aliquam ligula vitae pharetra scelerisque.</p>
           <a class="article-more" href="#">Read more</a>
         </article>
