--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="main-header-right">
-      <nav class="main-navigation">
+      <nav class="main-navigation  main-navigation--closed">
         <ul class="list">
           <li class="item"><a href="#projects">Home</a></li>
           <li class="item"><a href="#projects">Projects</a></li>
@@ -35,7 +35,7 @@
           <li class="item"><a href="#news">News</a></li>
           <li class="item"><a href="#contacts">Contacts</a></li>
         </ul>
-        <button class="close-button"></button>
+        <button class="menu-button"></button>
       </nav>
 
       <p class="adress">
@@ -197,7 +197,7 @@
         </footer>
       </div>
 
-      <article class="project  project--fondue  project--single">
+      <article class="project  project--fondue  project--single  hide-project">
         <div class="project-container">
           <h3 class="project-name">Fondue</h3>
           <ul class="project-information">
@@ -407,7 +407,9 @@
   </footer>
 
 
+  <script src="js/script.js" type="text/javascript">
 
+  </script>
 </body>
 
 </html>
