просмотр проекта на js

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><b class="lead">Client</b>: David Design</li>
             <li><b class="lead">Year</b>: 2014</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -90,7 +90,7 @@
             <li><b class="lead">Client</b>: Vitra</li>
             <li><b class="lead">Year</b>: 2012</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -105,7 +105,7 @@
             <li><b class="lead">Client</b>: Cassina</li>
             <li><b class="lead">Year</b>: 2013</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -120,7 +120,7 @@
             <li><b class="lead">Client</b>: Cassina</li>
             <li><b class="lead">Year</b>: 1970</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -134,7 +134,7 @@
             <li><b class="lead">Client</b>: Alessi</li>
             <li><b class="lead">Year</b>: 2013</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -149,7 +149,7 @@
             <li><b class="lead">For</b> Stelton</li>
           </ul>
           <p class="project-description">Potter focuses on the functional-ity and process of preparing tea. a big sieve allows the flavor of to evenly brewed.</p>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -164,7 +164,7 @@
             <li><b class="lead">Client</b>: B&B Italia</li>
             <li><b class="lead">Year</b>: 2014</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
@@ -178,7 +178,7 @@
             <li><b class="lead">Typology</b>: Armchairs</li>
             <li><b class="lead">Year</b>: 2012</li>
           </ul>
-          <a class="view-link" href="#">View project</a>
+          <a class="view-link" href="single-project.html" target="_blank">View project</a>
           <div class="like">
             <button class="like-btn" type="button">Like it!</button>
             <span class="like-count">+200</span>
