меню проектов на js

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <footer class="projects-footer">
           <h2 class="title">Timeline</h2>
           <ul class="navigation">
-            <li><a class="navigation-link current" href="#">2014</a></li>
+            <li><a class="navigation-link" href="#">2014</a></li>
             <li><a class="navigation-link" href="#">2013</a></li>
             <li><a class="navigation-link" href="#">2012</a></li>
             <li><a class="navigation-link" href="#">2011</a></li>
