эффекты при наведении

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         Boulevard
       </p>
       <p class="contacts">
-        <a href="tel:+6493456758">+64 9 345 6758</a><br>
-        <a href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
+        <a class="phone" href="tel:+6493456758">+64 9 345 6758</a><br>
+        <a class="email" href="mailto: info@dsgn-studio.com">info@dsgn-studio.com</a>
       </p>
     </div>
   </header>
